table with results extended

--- a/template.tex
+++ b/template.tex
@@ -752,7 +752,7 @@ As a result  computing and storing the calibration functions becomes feasible fo
       %    \vspace*{-6mm}
       % \end{table}
 
-      \input{myTable.tex}
+      \input{tableResults01.tex}
 
       Since the ground truth GPS position for each query image is available, we measure the overall recognition performance by the percentage of query test images for which the top-ranked database image was located within a distance of $20$ meters from the ground truth query location.  Results are summarized in table~\ref{tab:eval} and clearly demonstrate the benefits of  careful calibration of the per-location classifiers. In addition, the proposed per-location classifier method outperforms the baseline bag-of-visual-word approach~\cite{Philbin07} including confuser suppression~\cite{Knopp2010}.
 
