--- a/tableResults01.tex
+++ b/tableResults01.tex
@@ -13,16 +13,16 @@
 		\rowcolor{maroon!10}
 		BOW & 29.4 & 35.7 & 47.0 & 57.1 & 66.5 & 8.7 & 11.0 & 17.3 & 22.8 & 25.4  \\
         \rowcolor{maroon!10}
-		BOW p-val & 29.4 & 35.7 & 47.0 & 57.1 & 66.5 & 8.7 & 11.0 & 17.3 & 22.8 & 25.4  \\
+		BOW p-val  &&&&&|&&&&& \\
         \rowcolor{maroon!10}
-		BOW e-SVM& 29.4 & 35.7 & 47.0 & 57.1 & 66.5 & 8.7 & 11.0 & 17.3 & 22.8 & 25.4  \\
+		BOW e-SVM &&&&&|&&&&& \\
         \hline
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\rowcolor{maroon!10}
 		FV128         & 33.6 & 41.8 & 52.0 & 59.8 & 67.7 & 10.9 & 14.1 & 20.2 & 26.4 & 33.2 \\
 		\rowcolor{maroon!10}
-		FV128 p-val   & \textbf{37.8}  & \textbf{46.1} & \textbf{56.9} & \textbf{64.9} & \textbf{72.6}  &
-                                 \textbf{13.5}  &  \textbf{17.7}  &  \textbf{25.0}  &  \textbf{31.8}  &  \textbf{39.0} \\
+		FV128 p-val   & \textbf{}  & \textbf{} & \textbf{} & \textbf{} & \textbf{}  &
+                                 \textbf{}  &  \textbf{}  &  \textbf{}  &  \textbf{}  &  \textbf{} \\
         \rowcolor{maroon!10}
 		\textbf{FV128 e-SVM}   & \textbf{37.8}  & \textbf{46.1} & \textbf{56.9} & \textbf{64.9} & \textbf{72.6}  &
                                  \textbf{13.5}  &  \textbf{17.7}  &  \textbf{25.0}  &  \textbf{31.8}  &  \textbf{39.0} \\
@@ -31,8 +31,8 @@
         \rowcolor{maroon!10}
         FV512         & 44.3 & 51.7 & 61.4 & 68.7 & 75.2 & 17.3 &  21.1 &  28.4 &  34.2 &  40.3 \\
         \rowcolor{maroon!10}
-        FV512 p-val   & \textbf{47.6}  & \textbf{55.4} & \textbf{65.1} & \textbf{72.4} & \textbf{78.8}  &
-                                 \textbf{19.8} &  \textbf{25.1} &  \textbf{32.7}  & \textbf{38.7} &  \textbf{46.0} \\
+        FV512 p-val   & \textbf{}  & \textbf{} & \textbf{} & \textbf{} & \textbf{}  &
+                                 \textbf{} &  \textbf{} &  \textbf{}  & \textbf{} &  \textbf{} \\
         \rowcolor{maroon!10}
         \textbf{FV512 e-SVM}   & \textbf{47.6}  & \textbf{55.4} & \textbf{65.1} & \textbf{72.4} & \textbf{78.8}  &
                                  \textbf{19.8} &  \textbf{25.1} &  \textbf{32.7}  & \textbf{38.7} &  \textbf{46.0} \\
@@ -41,8 +41,8 @@
 		\rowcolor{maroon!10}
 		FV2048        & 46.9  & 54.1 & 63.8 & 70.5 & 76.8 & 19.2 & 23.5 & 29.9 &  35.2 &  41.9 \\
 		\rowcolor{maroon!10}
-		FV2048 p-val  & \textbf{50.2} & \textbf{57.3} & \textbf{67.0} & \textbf{73.8} & \textbf{78.0} &
-        \textbf{20.8} & \textbf{25.9} & \textbf{33.1} & \textbf{38.7} & \textbf{45.9}\\
+		FV2048 p-val  & \textbf{} & \textbf{} & \textbf{} & \textbf{} & \textbf{} &
+        \textbf{} & \textbf{} & \textbf{} & \textbf{} & \textbf{}\\
         \rowcolor{maroon!10}
         \textbf{FV2048 e-SVM}  & \textbf{50.2} & \textbf{57.3} & \textbf{67.0} & \textbf{73.8} & \textbf{78.0} &
         \textbf{20.8} & \textbf{25.9} & \textbf{33.1} & \textbf{38.7} & \textbf{45.9}\\
